old/data-bin/homepage.css
:root {
	--primary-color: #000000;
	--secondary-color: #0be369;
	--bg-color: #FFFFFF;
	--invert: 0;
}
[data-theme="dark"] {
	--primary-color: #FFFFFF;
	--secondary-color: #74499c;
	--bg-color: #121212;
	--invert: 1;
}
#cookie-banner {
	color: --primary-color: #FFFFFF;
	background-color: --bg-color: #121212;
}
html, body {
	width: 100%;
	height: 100%;
	margin: 0;
	box-sizing: border-box;
	user-select: none;
}
canvas {
	display: block;
}
#particlesJS {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #c10000;
	background-repeat: no-repeat;
	background-size: cover;
	background-position: 50% 50%;
	z-index: -2;
}
#wrapper {
	height: 100%;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
}
#content {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 20px 30px;
	z-index: -1;
	background-color: var(--bg-color);
	box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
	transition: 0.3s;
	text-align: center;
	border-radius: 4px;
}
h1 {
	color: var(--primary-color);
	margin: 0;
	font-size: 2em;
}
.avatar {
	border-radius: 250px 750px 250px 750px / 750px 250px 750px 250px;
	height: 20vh;
	margin: 10px 0 15px 0;
	border: 2px solid var(--bg-color);
	transition: border 1s;
	animation: avatar-wobbbble 10s ease-in-out alternate infinite;
}
.avatar:hover, .avatar:focus {
	border: 2px solid var(--primary-color);
	transition: border 1s;
}
.icon {
	height: 4vh;
}
.icon.black {
	filter: invert(var(--invert))
}
p {
	font-size: 1em;
	padding: .1em;
	margin: 5px 0;
	color: var(--primary-color);
	width: 150px;
}
#scripts {
	display: none;
}
.row {
	display: flex;
}
.col {
	flex: 33.33%;
	padding: 5px;
}
.warap {
	flex-wrap: wrap;
}
.high {
	opacity: 87%;
}
.med {
	opacity: 60%;
}
.dis {
	opacity: 38%;
}
.secret-text {
	color: var(--primary-color);
	z-index: 3;
	opacity: 0%;
	transition: opacity 3s;
}
.secret-text:hover {
	opacity: 87%;
	transition: opacity 3s;
}
a {
	color: var(--primary-color);
	text-decoration: none;
	transition: color 2s;
}
a:hover, a:focus {
	color: var(--secondary-color);
	text-decoration: underline;
	transition: color 2s;
}
/* slider */
.theme-switch-wrapper {
	display: flex;
	align-items: center;
}
.theme-switch-wrapper em {
	margin-left: 10px;
	font-size: 1rem;
}

.theme-switch {
	display: inline-block;
	height: 34px;
	position: relative;
	width: 60px;
}

.theme-switch input {
	display: none;
}

.slider {
	background-color: #ccc;
	bottom: 0;
	cursor: pointer;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	transition: .4s;
}

.slider:before {
	background-color: #fff;
	bottom: 4px;
	content: "";
	height: 26px;
	left: 4px;
	position: absolute;
	transition: .4s;
	width: 26px;
}

input:checked + .slider {
	background-color: #66bb6a;
}

input:checked + .slider:before {
	transform: translateX(26px);
}

.slider.round {
	border-radius: 34px;
}

.slider.round:before {
	border-radius: 50%;
}
@keyframes avatar-wobbbble {
  50% {
    border-radius: 750px 550px 250px 750px / 250px 750px 550px 450px;
  }
  100% {
    border-radius: 850px 250px 750px 250px / 250px 750px 250px 850px;
  }
}

